feat: PhysicsNeMo integration and P100 support\n\n- Add PhysicsNeMo-Sym residuals and advanced trainer\n- Sync configs (default/production/nemo_production)\n- Add SLURM scripts and P100 compatibility test\n- Clean old nemo entry files\n- Update docs (README_PhysicsNeMo)

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -39,6 +39,7 @@ network:
 # =============================================================================
 physics:
   reynolds_number: 3000          # Reynolds數
+  use_nemo_sym: false            # 是否使用PhysicsNeMo-Sym殘差（預設關閉）
   
   # 計算域配置
   domain:
